components/NavBar/NavBar.module.scss
@use "../../styles/theme";

.nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  display: flex;
  z-index: 1000;
  padding: 16px 24px;
  color: white;
  a {
    margin: 0 16px;
    font-size: x-large;
    font-weight: 600;
    text-decoration: none;
    color: white;
  }
  a:hover {
    color: theme.$primary;
  }
}

.blackNav {
  color: black;
  a {
    color: black;
  }
  a:hover {
    color: #ffad00;
  }
}

.hamburger {
  background: none;
  border: none;
  cursor: pointer;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 10000;
  backdrop-filter: blur(2px);
  .mobileNav {
    width: 60vw;
    min-width: 275px;
    max-width: 400px;
    min-height: 100vh;
    background-color: theme.$offwhite;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    animation: slideIn 300ms ease-out;
    a {
      margin: 16px 0;
      font-size: x-large;
      font-weight: 600;
      text-decoration: none;
      color: #000;
    }
    a:hover {
      color: theme.$primary;
    }
  }
}

@keyframes slideIn {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0%);
  }
}

@media (max-width: 900px) {
  .hideOnSmall {
    display: none;
  }
  .blackNav {
    display: none;
  }
}

@media (min-width: 900px) {
  .hamburger {
    display: none;
  }
}

